# replay-assurance

./: .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
parser_assurance/: __init__.py  __main__.py  canonical.py  drift.py  evaluation.py  event_store.py  impact.py  parser.py  replay.py  simulation.py
parser_assurance/data/: CORPUS_PROVENANCE.md
parser_assurance/data/corpus/claude/v_real/: expected_real.json  payload_real.json
parser_assurance/data/corpus/gemini/v_real/: expected_real.json  payload_real.json
parser_assurance/data/corpus/openai/v_real/: expected_real.json  payload_real.json
parser_assurance/scripts/: generate_corpus.py
tests/: test_thesis.py
