[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "replay-assurance"
version = "0.1.0"
description = "Detect silent canonical-correctness failures in provider payload parsers"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = []  # stdlib only, by design

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
replay-demo = "parser_assurance.simulation:main"
replay-gen-corpus = "parser_assurance.scripts.generate_corpus:main"

[tool.setuptools.packages.find]
include = ["parser_assurance*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
